--- a/templates/plots.html
+++ b/templates/plots.html
@@ -26,29 +26,54 @@
 
 <body>
 <div class="container">
-    <h1>Results for algorithm run #{{id}}!</h1>
+    <h1>Results for algorithm run #{{id}}! <small></small></h1>
     <h2>Setup</h2>
-    <table>
-        {% for key, value in setup.items() %}
-        <tr>
-            <th> {{ key }}</th>
-            <td> {{ value }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-    <h2>Plots</h2>
     <div class="container">
-        <div>
-            <img src="{{plot_url}}" height="480" width="640">
-        </div>
+        <table class="table table-hover table-bordered">
+            <tr>
+                <th>Variable name</th>
+                <th>Value</th>
+            </tr>
+            {% for key, value in setup.items() %}
+            <tr>
+                <th> {{ key }}</th>
+                <td> {{ value }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    <div class="container">
+        <h2>Results</h2>
+
+    </div>
+    <div class="container">
+        <h2>Plots</h2>
         <div style="display: inline-block;">
             {{ div|safe }}
         </div>
-
         <div style="display: inline-block;">
             {{ div2|safe }}
         </div>
+        <div>
+            <img src="{{plot_url}}" height="640" width="854">
+        </div>
     </div>
+</div>
+
+<div class="container">
+    <h2>Best moveset</h2>
+    <table class="table table-striped table-condensed table-bordered">
+        <tr>
+            <th>Names</th>
+            <th>Bits</th>
+        </tr>
+        {% for word, bits in winner_moveset %}
+        <tr>
+            <th>{{word}}</th>
+            <td>{{bits}}</td>
+        </tr>
+        {% endfor %}
+    </table>
 </div>
 {{ script|safe }}
 {{ script2|safe }}
