--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                 <option value="random">Random</option>
             </select>
             <br>
-            <label for="mut">Number of iterations</label>
+            <label for="mut">Number of mutations</label>
             <input id="mut" type="number" value="0.001" class="form-control" name="mutation_rate"
                    placeholder="Enter mutation rate" required>
             <label for="sel">Selection type</label>
