--- a/templates/plots.html
+++ b/templates/plots.html
@@ -26,54 +26,94 @@
 
 <body>
 <div class="container">
-    <h1>Results for algorithm run #{{id}}! <small></small></h1>
-    <h2>Setup</h2>
-    <div class="container">
-        <table class="table table-hover table-bordered">
-            <tr>
-                <th>Variable name</th>
-                <th>Value</th>
-            </tr>
-            {% for key, value in setup.items() %}
-            <tr>
-                <th> {{ key }}</th>
-                <td> {{ value }}</td>
-            </tr>
-            {% endfor %}
-        </table>
+    <div class="row">
+        <h1>Results for algorithm run #{{id}}!
+            <small></small>
+        </h1>
     </div>
-    <div class="container">
+    <div class="row">
+        <h2>Setup</h2>
+    </div>
+    <div class="row">
+        <div class="table-responsive">
+            <table class="table table-hover table-bordered">
+                <tr>
+                    <th>Variable name</th>
+                    <th>Value</th>
+                </tr>
+                {% for key, value in setup.items() %}
+                <tr>
+                    <th> {{ key }}</th>
+                    <td> {{ value }}</td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+    </div>
+
+    <div class="row">
         <h2>Results</h2>
-
     </div>
-    <div class="container">
+
+    <div class="row">
+        <p>Found winner = {{ found_winner }}</p>
+        <p>Number of generations: {{num_tries}} out of {{num_tries_max}}</p>
+    </div>
+
+    <div class="row">
         <h2>Plots</h2>
-        <div style="display: inline-block;">
+    </div>
+
+    <div class="row">
+        <div class="col-md-6"><p>
             {{ div|safe }}
+        </p>
         </div>
-        <div style="display: inline-block;">
+        <div class="col-md-6"><p>
             {{ div2|safe }}
-        </div>
-        <div>
-            <img src="{{plot_url}}" height="640" width="854">
+        </p>
         </div>
     </div>
-</div>
+    <div class="row">
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <tr>
+                    {% for name in plot_urls['names'] %}
+                    <th class="text-center">
+                        {{name}}
+                    </th>
+                    {% endfor %}
+                </tr>
+                <tr>
+                    {% for link in plot_urls['links'] %}
+                    <td>
+                        <img src="{{link}}" height="270" width="360">
+                    </td>
+                    {% endfor %}
+                </tr>
+            </table>
+        </div>
+    </div>
 
-<div class="container">
-    <h2>Best moveset</h2>
-    <table class="table table-striped table-condensed table-bordered">
-        <tr>
-            <th>Names</th>
-            <th>Bits</th>
-        </tr>
-        {% for word, bits in winner_moveset %}
-        <tr>
-            <th>{{word}}</th>
-            <td>{{bits}}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    <div class="row">
+        <h2>Best moveset</h2>
+    </div>
+    <div class="row">
+        <div class="table-responsive">
+            <table class="table table-striped table-condensed table-bordered">
+                <tr>
+                    <th>Names</th>
+                    <th>Bits</th>
+                </tr>
+                {% for word, bits in winner_moveset %}
+                <tr>
+                    <th>{{word}}</th>
+                    <td>{{bits}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+    </div>
 </div>
 {{ script|safe }}
 {{ script2|safe }}
